todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-app-vol
          persistentVolumeClaim:
            claimName: todo-app-pvc
      containers:
        - name: todo-app-frontend
          image: todo-app-frontend:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: todo-app-vol
              mountPath: /usr/src/app/files
        - name: todo-app-backend
          image: todo-app-backend:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: todo-app-vol
              mountPath: /usr/src/app/files
