todo_app/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
